<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mobile.brasiltv.view.TitleBarView android:id="@id/mTbvTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" app:titleBgColor="@color/color_191a23" app:titleText="@string/title_login" app:titleTextColor="@color/color_ffffff" />
    <TextView android:textSize="28.0px" android:textColor="@color/color_ffffff" android:id="@id/mTvAccount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0px" android:layout_marginTop="40.0px" android:text="@string/other_login_phone" android:layout_below="@id/mTbvTitle" />
    <com.mobile.brasiltv.view.login.PickAreaView android:id="@id/mPavArea" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0px" android:layout_marginTop="20.0px" android:layout_marginRight="24.0px" />
    <TextView android:textSize="28.0px" android:textColor="@color/color_ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0px" android:layout_marginTop="40.0px" android:text="@string/verification_code" />
    <com.mobile.brasiltv.view.login.VerifyCodeView android:id="@id/mVcvVerifyCode" android:layout_width="fill_parent" android:layout_height="90.0px" android:layout_marginLeft="24.0px" android:layout_marginTop="20.0px" android:layout_marginRight="24.0px" app:vcInputHint="@string/email_verification_code" />
    <TextView android:enabled="false" android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/color_ffffff" android:gravity="center" android:id="@id/mTvLogin" android:background="@drawable/selector_btn_login" android:layout_width="fill_parent" android:layout_height="100.0px" android:layout_marginLeft="24.0px" android:layout_marginTop="90.0px" android:layout_marginRight="24.0px" android:text="@string/login" />
    <TextView android:textSize="15.0sp" android:textColor="@color/color_ffffff" android:layout_gravity="center_horizontal" android:id="@id/mTvUseMobileLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0px" android:text="@string/use_mobile_login" />
    <TextView android:textSize="13.0sp" android:textColor="@color/color_f23232" android:layout_gravity="center_horizontal" android:id="@id/mTvErrorHint" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0px" />
    <com.zhy.autolayout.AutoLinearLayout android:gravity="bottom|center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="12.0sp" android:textColor="@color/color_999999" android:paddingBottom="92.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current_device_account" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_ffaa00" android:id="@id/mTvDeviceId" android:paddingBottom="92.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0px" />
    </com.zhy.autolayout.AutoLinearLayout>
</merge>
