<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/mLayoutLoginButtons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0px" android:layout_marginTop="548.0px" android:layout_marginRight="32.0px"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbAccountLogin" android:layout_width="fill_parent" android:layout_height="100.0px" app:loginBg="@drawable/bg_btn_account_login" app:loginIcon="@drawable/ic_login_account" app:loginMethod="@string/login_method_account" app:loginMethodColor="@color/color_ffffff" />
    <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbGoogleLogin" android:layout_width="fill_parent" android:layout_height="100.0px" android:layout_marginTop="32.0px" app:loginBg="@drawable/bg_btn_google_login" app:loginIcon="@drawable/ic_login_google_new" app:loginMethod="@string/login_method_google" app:loginMethodColor="@color/color_000000" />
    <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbEmailLogin" android:layout_width="fill_parent" android:layout_height="100.0px" android:layout_marginTop="32.0px" app:loginBg="@drawable/bg_btn_email_login" app:loginIcon="@drawable/ic_bind_mail" app:loginMethod="@string/login_method_email" app:loginMethodColor="@color/color_ffffff" />
    <com.mobile.brasiltv.view.login.LoginButton android:id="@id/mLbMobileLogin" android:layout_width="fill_parent" android:layout_height="100.0px" android:layout_marginTop="32.0px" app:loginBg="@drawable/bg_btn_mobile_login" app:loginIcon="@drawable/ic_login_mobile" app:loginMethod="@string/login_method_mobile" app:loginMethodColor="@color/color_000000" />
</com.zhy.autolayout.AutoLinearLayout>
