<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout android:background="@color/color_191a23" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mobile.brasiltv.view.TitleView android:id="@id/mTitleView" android:background="@color/color_191a23" android:layout_width="fill_parent" android:layout_height="wrap_content" app:titleViewTitle="@string/setting_language" />
    <RadioGroup android:orientation="vertical" android:id="@id/rgInfo" android:background="@drawable/bg_change_language" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/mTitleView">
        <RadioButton android:textColor="@drawable/btn_lang_text_selector" android:gravity="center_vertical" android:id="@id/rbPT" android:layout_width="fill_parent" android:layout_height="44.0dip" android:button="@null" android:text="@string/portuguesa" android:layout_weight="1.0" />
        <View android:background="@color/color_191a23" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <RadioButton android:textColor="@drawable/btn_lang_text_selector" android:gravity="center_vertical" android:id="@id/rbEN" android:layout_width="fill_parent" android:layout_height="44.0dip" android:button="@null" android:text="@string/en" android:textAllCaps="false" />
        <View android:background="@color/color_191a23" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <RadioButton android:textColor="@drawable/btn_lang_text_selector" android:gravity="center_vertical" android:id="@id/rbES" android:layout_width="fill_parent" android:layout_height="44.0dip" android:button="@null" android:text="@string/spanish" />
        <View android:background="@color/color_191a23" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </RadioGroup>
</com.zhy.autolayout.AutoRelativeLayout>
