<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:id="@id/mAllRoot" android:background="@color/color_0c0c0f" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mobile.brasiltv.view.TitleBarView android:id="@id/mTbvTitle" android:layout_width="fill_parent" android:layout_height="88.0px" app:compatBarHeight="false" app:titleText="@string/dm_title" app:titleTextColor="@color/white" />
    <TextView android:textSize="24.0px" android:textColor="@color/white" android:gravity="left" android:id="@id/mTvDesc" android:paddingLeft="32.0px" android:paddingTop="40.0px" android:paddingRight="30.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dm_hint" />
    <TextView android:textSize="24.0px" android:textColor="@color/color_99ffffff" android:gravity="left" android:id="@id/mTvHint" android:paddingLeft="32.0px" android:paddingRight="32.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0px" android:text="@string/dm_desc" />
    <com.zhy.autolayout.AutoFrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/mRvDevice" android:paddingLeft="32.0px" android:paddingRight="32.0px" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <com.mobile.brasiltv.view.KoocanEmptyView android:id="@id/mKevLoading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" app:bgColor="@color/transparent" app:emptyShowType="loading" />
        <com.zhy.autolayout.AutoLinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/mAllException" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="252.0px" android:layout_height="196.0px" android:src="@drawable/ic_status_exception" android:scaleType="fitXY" />
            <TextView android:textSize="28.0px" android:textColor="@color/color_6a6d74" android:gravity="center" android:paddingLeft="40.0px" android:paddingRight="40.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0px" android:scaleType="fitXY" android:text="@string/exception_status" />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoFrameLayout>
    <com.zhy.autolayout.AutoFrameLayout android:id="@id/mAflMenu" android:background="@color/color_1d1d1d" android:layout_width="fill_parent" android:layout_height="136.0px">
        <TextView android:textSize="28.0px" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/mTvSelectAll" android:paddingLeft="104.0px" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/dm_select_all" />
        <ImageView android:layout_gravity="center_vertical" android:id="@id/mIvSelect" android:layout_width="32.0px" android:layout_height="32.0px" android:layout_marginLeft="56.0px" android:src="@drawable/bg_single_select" />
        <TextView android:textSize="28.0px" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center|right" android:id="@id/mTvKickOutDevice" android:background="@drawable/bg_filter_cond" android:layout_width="248.0px" android:layout_height="72.0px" android:layout_marginRight="28.0px" android:text="@string/dm_remove" />
    </com.zhy.autolayout.AutoFrameLayout>
</com.zhy.autolayout.AutoLinearLayout>
