<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout android:orientation="vertical" android:background="@color/color_1f2029" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mobile.brasiltv.view.TitleView android:layout_width="fill_parent" android:layout_height="wrap_content" app:titleViewTitle="@string/mine_order" />
    <include android:id="@id/mLayoutNoLogin" layout="@layout/item_order_status" />
    <com.zhy.autolayout.AutoLinearLayout android:orientation="horizontal" android:id="@id/mLayoutTab" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="88.0px">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/color_important" android:gravity="center" android:id="@id/mTextOrder" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/all_orders" android:layout_weight="1.0" />
        <TextView android:textSize="16.0sp" android:textColor="@color/color_cccccc" android:gravity="center" android:id="@id/mTextRedemption" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/redemption_record" android:layout_weight="1.0" />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoFrameLayout android:id="@id/mAflOrder" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="8.0px" android:layout_weight="1.0">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/mRecyclerOrder" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <TextView android:textSize="14.0sp" android:layout_gravity="bottom" android:id="@id/mTvOrderHint" android:background="@drawable/bg_order_hint" android:paddingLeft="9.0px" android:paddingTop="16.0px" android:paddingRight="9.0px" android:paddingBottom="16.0px" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0px" android:layout_marginRight="40.0px" android:layout_marginBottom="55.0px" />
    </com.zhy.autolayout.AutoFrameLayout>
    <include android:id="@id/mOrderStatus" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" layout="@layout/item_order_status" />
    <com.zhy.autolayout.AutoFrameLayout android:id="@id/mAflRefresh" android:background="@color/color_1f202a" android:layout_width="fill_parent" android:layout_height="120.0px">
        <View android:background="@color/color_17171F" android:layout_width="fill_parent" android:layout_height="2.0px" />
        <TextView android:enabled="true" android:textSize="15.0sp" android:textColor="@color/color_important" android:gravity="center" android:layout_gravity="center" android:id="@id/mTvRefresh" android:background="@drawable/bg_order_refresh" android:layout_width="wrap_content" android:layout_height="60.0px" android:minWidth="300.0px" android:text="@string/order_refresh" />
        <TextView android:textSize="15.0sp" android:textColor="@color/color_ffffff" android:layout_gravity="center|right" android:id="@id/mTvHelp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="58.0px" android:text="@string/order_help" />
    </com.zhy.autolayout.AutoFrameLayout>
</com.zhy.autolayout.AutoLinearLayout>
